--- a/homework.ipynb
+++ b/homework.ipynb
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 277,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
@@ -468,11 +468,13 @@
         "    with open(filename) as f:\n",
         "        data = csv.DictReader(f,delimiter=\"\\t\")\n",
         "        #print(header)\n",
-        "        print_row ={}\n",
+        "        \n",
         "        for row in data:\n",
+        "            print_row ={}\n",
+        "            #print(row)\n",
         "            for key, value in row.items():\n",
         "                try:\n",
-        "                    print_row[key] = int(value.strip())\n",
+        "                    print_row[key] = int(value)\n",
         "                except ValueError:\n",
         "                    print_row[key] = None\n",
         "            yield print_row"
@@ -480,36 +482,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 278,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[{'a': 3, 'b': 4}]"
+              "[{'d': 6, 'e': None, 'f': 7}]"
             ]
           },
-          "execution_count": 116,
+          "execution_count": 278,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "list(p6(\"data6_a.tsv\"))"
+        "list(p6(\"data6_c.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 279,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[{'g': None, 'h': None, 'i': None}, {'g': None, 'h': None, 'i': None}]"
+              "[{'g': 3, 'h': 5, 'i': 9}, {'g': None, 'h': None, 'i': None}]"
             ]
           },
-          "execution_count": 117,
+          "execution_count": 279,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1008,7 +1010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 284,
       "metadata": {
         "id": "fMqaF4brQhrq"
       },
@@ -1020,20 +1022,23 @@
         "    with open(filename) as inputfile:\n",
         "        reader = csv.reader(inputfile, delimiter=',')\n",
         "        data = list(reader)\n",
-        "        print(data[0])"
+        "        return data[0]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 285,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['foo', 'bar']\n"
-          ]
+          "data": {
+            "text/plain": [
+              "['foo', 'bar']"
+            ]
+          },
+          "execution_count": 285,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1042,19 +1047,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 286,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['super', 'man']\n"
-          ]
+          "data": {
+            "text/plain": [
+              "['foo', 'bar']"
+            ]
+          },
+          "execution_count": 286,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "p13(\"data13_c.csv\")"
+        "p13(\"data13_a.csv\")"
       ]
     },
     {
@@ -1430,7 +1438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": 287,
       "metadata": {
         "id": "qAgVEX3eQ4Hm"
       },
@@ -1443,14 +1451,14 @@
         "        reader = csv.DictReader(file, delimiter=\"\\t\")\n",
         "        for row in reader:\n",
         "            if row[column_name] == column_value:\n",
-        "                print(row)\n",
+        "                return row\n",
         "            \n",
         "        return None\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 288,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1459,7 +1467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 289,
       "metadata": {},
       "outputs": [],
       "source": [
